--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,5 @@
         <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.mycompany.hangmanprojectv1.HangmanProjectV1</exec.mainClass>
     </properties>
-    <name>HangmanProjectV1.2</name>
+    <name>HangmanProjectV1.222E</name>
 </project>
